src/test/deca/codegen/valid/created/objet/thisDotField.deca
class A {
    int x;
    void m(){
        if(this.x == 0){
            println("passed");
        }
    }
}


{
    A a =new A();
    a.m();

}