src/test/deca/codegen/invalid/created/objet/invalidSignature.deca
// Incorrect method call signature

class A {
    float m(int a, int c){
        return a+c;
    }
}

{
    A a = new A();
    println(a.m(7,8,9));
}